# HormigasAIS-Core

./: .json  .lenpt  LICENSE (MIT)  README.md  lenpt-parser  output.json  output.yaml  pyproject.toml
.github/workflows/: test.yaml  test.yml
Index/: html.json
Salida/: .json
lenpt/: base.lenpt
python lenpt-parser/parser/: lenpt_parser.py
