[project]
name = "lenpt-core-patch"
version = "0.1.0"
description = "Fragmentos simbólicos reutilizables para LenPT: flags, checksums, codificación y slicing semántico."
authors = [
    { name="Cristhiam Quiñonez", email="chrisquionez354@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8" 

[tool.setuptools]
packages = ["lenpt_core"] 

[tool.setuptools.package-data]
"lenpt_core" = ["*.lenpt", "*.json"] 

[project.urls]
"Repositorio" = "https://github.com/HormigasAIS/lenpt-core-patch"
"Documentación" = "https://github.com/HormigasAIS/lenpt-core-patch/docs" 

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
